--- a/downloads.html
+++ b/downloads.html
@@ -5,6 +5,12 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+  <title>https://devilking6105.github.io/hthcoin/</title>
+<body bgcolor="#000">
+
+
+
+
 <!-- Stylesheets -->
     <link href="Downloads/bootstrap.css" rel="stylesheet">
     <link href="Downloads/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
@@ -18,9 +24,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script type="text/javascript" async="" src="Downloads/analytics.js"></script><script async="" src="Downloads/js.js"></script>
@@ -28,80 +31,22 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'UA-121537271-1');
-    </script>	
-	
-	
-  <title>https://devilking6105.github.io/hthcoin/</title>
-<body bgcolor="#000">
+    </script>
 
-	
-	
 </head>
-<body>
 
-	<!-- Nav Bar -->
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
-            <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
-        </ul>
-        </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://landforthehomeless.org">L4H</a></li>
-            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
-            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
-	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
-	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://devilking6105.github.io/hthcoin/downloads.html">Downloads</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/specifications.html">Specs</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/FAQ.html">FAQ</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/resources.html">Resources</a></li>
-            <li><a href="https://github.com/HTHcoin/HTH/wiki/HTH-Help-The-Homeless-Coin-wiki/" target="_blank">Wiki</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">About <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://devilking6105.github.io/hthcoin/team.html">Meet Team</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/about.html">About Us</a></li>
-            <li><a href="https://devilking6105.github.io/hthcoin/contact.html">Contact</a></li>
-         </ul>
-        </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Exchanges <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="https://wallet.crypto-bridge.org/market/BRIDGE.HTH_BRIDGE.BTC" target="_blank"">Crypto-Bridge</a></li>
-            <li><a href="https://smartrade.com/">SmarTrade</a></li>
-         </ul>
-        </li>
-        <li><a href="http://explorer.hth.world">Explorer</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<body bgcolor=" #000">
+
+<div id="nav">
+	<ul>
+		<li><a href="#">About Us</a></li>
+		<li><a href="#">Our Products</a></li>
+		<li><a href="#">FAQs</a></li>
+		<li><a href="#">Contact</a></li>
+		<li><a href="#">Login</a></li>
+	</ul>
+</div>
 
 <!-- Work Section -->
 <section class="work-section style-two alternate">
@@ -140,6 +85,7 @@
     </div>
 </section>
 <!-- End Work Section -->
+
 
 
 <script src="Downloads/jquery.js"></script>
