--- a/downloads.html
+++ b/downloads.html
@@ -32,7 +32,16 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<style>
+	body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #000;
+}
+	</style>
+	
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
