--- a/specifications.html
+++ b/specifications.html
@@ -5,12 +5,37 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	<!-- Stylesheets -->
+    <link href="HTH/bootstrap.css" rel="stylesheet">
+    <link href="HTH/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
+    <link href="HTH/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
+    <link href="HTH/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
+    <link href="HTH/style.css" rel="stylesheet">
+    <link href="HTH/responsive.css" rel="stylesheet">
+    <link href="https://hthcoin.world/favicon.ico" rel="icon">
+	 <!-- Responsive -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+	 <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" async="" src="HTH/analytics.js"></script><script async="" src="HTH/js.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-121537271-1');
+    </script>
+
+	
+	
   <title>https://devilking6105.github.io/hthcoin/</title>
 <body bgcolor="#000">
 
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	
 </head>
 <body>
 
@@ -30,7 +55,6 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
             <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
         </ul>
@@ -38,11 +62,9 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://landforthehomeless.org">L4H</a></li>
-            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
-            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
-	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
-	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
+            <li><a href="#">Page 1-1</a></li>
+            <li><a href="#">Page 1-2</a></li>
+            <li><a href="#">Page 1-3</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -75,12 +97,8 @@
     </div>
   </div>
 </nav>
-
 <!-- End Nav -->
-
-
 <!-- Start Work Area -->
-
 <!-- Specifications Section -->
 <section class="news-section" id="specs">
     <div class="auto-container">
@@ -88,7 +106,6 @@
             <h2><span>Specifications</span></h2>
             <div class="separator-two"></div>
         </div>
-
         <div class="row clearfix">
             <div class="content-column col-xs-12">
                 <div class="inner-column">
@@ -146,112 +163,5 @@
     </div>
 </section>
 <!-- End Specifications -->
-
-
-
-		   
-
-<script src="HTH/jquery.js"></script>
-<script src="HTH/bootstrap.js"></script>
-<!--Revolution Slider-->
-<script src="HTH/jquery_004.js"></script>
-<script src="HTH/jquery_002.js"></script>
-<script src="HTH/revolution_003.js"></script>
-<script src="HTH/revolution_009.js"></script>
-<script src="HTH/revolution_005.js"></script>
-<script src="HTH/revolution_007.js"></script>
-<script src="HTH/revolution_008.js"></script>
-<script src="HTH/revolution.js"></script>
-<script src="HTH/revolution_006.js"></script>
-<script src="HTH/revolution_002.js"></script>
-<script src="HTH/revolution_004.js"></script>
-<script src="HTH/clipboard.js"></script>
-<script src="HTH/main-slider-script.js"></script>
-<!--End Revolution Slider-->
-<script src="HTH/jquery-ui.js"></script>
-<script src="HTH/jquery_003.js"></script>
-<script src="HTH/owl.js"></script>
-<script src="HTH/wow.js"></script>
-<script src="HTH/appear.js"></script>
-<script src="HTH/script.js"></script>
-<script>
-    var $progress = $(".progress"),
-        $bar = $(".progress__bar"),
-        update,
-        resetColors,
-        hth = 0,
-        btc = 0,
-        hthToBtc = 0,
-        to,
-        btcaddr = '3Kmqb2d9fBTq7kr66Hp5N47661QzS9dKoQ',
-        hthAddress = 'HF5rjaXU7s3QCKuSb6uYJvAeVa3qWC3MKm';
-    resetColors = function() {
-        $bar
-            .removeClass("progress__bar--green")
-            .removeClass("progress__bar--yellow")
-            .removeClass("progress__bar--orange")
-            .removeClass("progress__bar--blue");
-        $progress
-            .removeClass("progress--complete");
-    };
-    update = function() {
-        $.getJSON('https://api.coingecko.com/api/v3/coins/help-the-homeless-coin', function(res) {
-            var price = res.tickers[0].converted_last.btc;
-            /*price = price.split('0.')[1];
-            price = +price;*/
-            $('#jsLastPrice').text("1 HTH = " + price + " BTC");
-        }).fail(function(e) {
-            console.log(e);
-        });
-        $.getJSON('https://blockchain.info/q/addressbalance/'+ btcaddr +'?confirmations=1', function(balance) {
-            btc = +balance;
-        });
-        $.getJSON('https://api.crypto-bridge.org/api/v1/ticker', function(d) {
-            d.forEach(function(ticker) {
-                if(ticker.id === 'HTH_BTC') {
-                    hthToBtc = +ticker.last;
-                    return false;
-                }
-            });
-        });
-        $.getJSON('https://explorer.hth.world/ext/getaddress/' + hthAddress, function(res) {
-            console.log(res);
-            hth = +res.balance * 100000000;
-        }).fail(function(e) {
-            console.log(e);
-        });
-        $('.js-hth-addy').each(function(i, e) {
-            var addy = $(e).data('addy');
-            $.getJSON('https://explorer.hth.world/ext/getaddress/' + addy, function(res) {
-                $(e).text(parseInt(res.received).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","));
-            });
-        });
-        to = setInterval(function() {
-            if(hth) {
-                clearInterval(to);
-                to = null;
-                $('.js-raised').text(parseInt(hth / 100000000).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","));
-            }
-        }, 60000);
-        setTimeout(function() {
-            update();
-        }, 60000 * 5);
-    };
-    $progress.addClass("progress--active");
-    update();
-    var clipboard = new ClipboardJS('.js-copy');
-    clipboard.on('success', function(e) {
-        alert('Address Copied!');
-        e.clearSelection();
-    });
-    var clip = new ClipboardJS('.js-hth-copy');
-    clip.on('success', function(e) {
-        alert('Address Copied!');
-        e.clearSelection();
-    });
-</script>
-
-
-
 </body>
 </html>
