--- a/FAQ.html
+++ b/FAQ.html
@@ -11,6 +11,30 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+  <!-- Stylesheets -->
+    <link href="Faq/bootstrap.css" rel="stylesheet">
+    <link href="Faq/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
+    <link href="Faq/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
+    <link href="Faq/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
+    <link href="Faq/style.css" rel="stylesheet">
+    <link href="Faq/responsive.css" rel="stylesheet">
+    <link href="https://hthcoin.world/favicon.ico" rel="icon">
+    <!-- Responsive -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" async="" src="Faq/analytics.js"></script><script async="" src="Faq/js.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-121537271-1');
+    </script>
+
 </head>
 <body>
 
@@ -30,7 +54,6 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
             <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
         </ul>
@@ -38,11 +61,9 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://landforthehomeless.org">L4H</a></li>
-            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
-            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
-	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
-	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
+            <li><a href="#">Page 1-1</a></li>
+            <li><a href="#">Page 1-2</a></li>
+            <li><a href="#">Page 1-3</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -75,7 +96,6 @@
     </div>
   </div>
 </nav>
-
 <!-- Event Section -->
 <section class="event-section" style="background-image:url(images/background/homeless-2223116_1280.jpg);">
     <div class="auto-container">
@@ -96,7 +116,6 @@ extraneous circumstances.</p>
                         </div>
                     </div>
                 </div>
-
                 <!-- FAQ Block -->
                 <div class="event-block col-md-6 col-sm-6 col-xs-12">
                     <div class="inner-box">
@@ -113,7 +132,6 @@ something about. Spread out across the world, each of the team come with
                         </div>
                     </div>
                 </div>
-
                 <!-- FAQ Block -->
                 <div class="event-block col-md-6 col-sm-6 col-xs-12">
                     <div class="inner-box">
@@ -131,7 +149,6 @@ like food, shelter, clothing, and rehabilitation.</p>
                         </div>
                     </div>
                 </div>
-
                 <!-- FAQ Block -->
                 <div class="event-block col-md-6 col-sm-6 col-xs-12">
                     <div class="inner-box">
@@ -149,7 +166,6 @@ with Crypto-Bridge so that HTH Coin can be exchanged as soon as possible
                         </div>
                     </div>
                 </div>
-
                 <!-- FAQ Block -->
                 <div class="event-block col-md-6 col-sm-6 col-xs-12">
                     <div class="inner-box">
@@ -166,7 +182,6 @@ the miners who are the backbone to making this work.</p>
                         </div>
                     </div>
                 </div>
-
                 <!-- FAQ Block -->
                 <div class="event-block col-md-6 col-sm-6 col-xs-12">
                     <div class="inner-box">
@@ -184,7 +199,6 @@ suggestions for the future.</p>
                         </div>
                     </div>
                 </div>
-
                 <!-- FAQ Block -->
                 <div class="event-block col-md-6 col-sm-6 col-xs-12">
                     <div class="inner-box">
@@ -202,38 +216,10 @@ mine HTH Coin at one of the many supporting pools.</p>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
 </section>
 <!-- End Event Section -->
-
-
-
-<script src="Faq/jquery.js"></script>
-<script src="Faq/bootstrap.js"></script>
-<!--Revolution Slider-->
-<script src="Faq/jquery_003.js"></script>
-<script src="Faq/jquery_002.js"></script>
-<script src="Faq/revolution_002.js"></script>
-<script src="Faq/revolution_008.js"></script>
-<script src="Faq/revolution_007.js"></script>
-<script src="Faq/revolution_009.js"></script>
-<script src="Faq/revolution_004.js"></script>
-<script src="Faq/revolution_003.js"></script>
-<script src="Faq/revolution_006.js"></script>
-<script src="Faq/revolution_005.js"></script>
-<script src="Faq/revolution.js"></script>
-<script src="Faq/clipboard.js"></script>
-<script src="Faq/main-slider-script.js"></script>
-<!--End Revolution Slider-->
-<script src="Faq/jquery-ui.js"></script>
-<script src="Faq/jquery_004.js"></script>
-<script src="Faq/owl.js"></script>
-<script src="Faq/wow.js"></script>
-<script src="Faq/appear.js"></script>
-<script src="Faq/script.js"></script>
-
 </body>
 </html>
