--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,18 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <title>https://devilking6105.github.io/hthcoin/</title>
 </head>
-<body bgcolor=" #000">
+<body>
+	<style>
+		
+		body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #000;
+}
+		
+	</style>
 
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
