--- a/FAQ.html
+++ b/FAQ.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-  <title>https://devilking6105.github.io/hthcoin/</title>
-<body bgcolor="#000">
-
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <title>https://devilking6105.github.io/hthcoin/</title>
+
+
 
   <!-- Stylesheets -->
     <link href="Faq/bootstrap.css" rel="stylesheet">
@@ -37,6 +37,20 @@
 
 </head>
 <body>
+	
+	<style>
+		
+		body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #000;
+}
+		
+	
+	</style>
+
 
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
