--- a/FAQ.html
+++ b/FAQ.html
@@ -68,6 +68,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
             <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
         </ul>
@@ -75,9 +76,11 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="https://landforthehomeless.org">L4H</a></li>
+            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
+            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
+	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
+	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
           </ul>
         </li>
         <li class="dropdown">
@@ -110,6 +113,8 @@
     </div>
   </div>
 </nav>
+		    
+		    
 <!-- Event Section -->
 <section class="event-section" style="background-image:url(images/background/homeless-2223116_1280.jpg);">
     <div class="auto-container">
