--- a/FAQ.html
+++ b/FAQ.html
@@ -116,7 +116,7 @@
 		    
 		    
 <!-- Event Section -->
-<section class="event-section" style="background-image:url(images/background/homeless-2223116_1280.jpg);">
+<section class="event-section" style="background: #000">
     <div class="auto-container">
         <div class="event-list">
             <div class="row clearfix">
