--- a/team.html
+++ b/team.html
@@ -42,6 +42,19 @@
  
 </head>
 <body>
+	
+	<style>
+		
+		body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #000;
+}
+		
+	
+	</style>
 
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
