--- a/about.html
+++ b/about.html
@@ -5,14 +5,51 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-  <title>https://devilking6105.github.io/hthcoin/</title>
-<body bgcolor="#000">
-
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	
+	<!-- Stylesheets -->
+    <link href="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/bootstrap.css" rel="stylesheet">
+    <link href="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
+    <link href="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
+    <link href="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
+    <link href="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/style.css" rel="stylesheet">
+    <link href="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/responsive.css" rel="stylesheet">
+    <link href="https://hthcoin.world/favicon.ico" rel="icon">
+    <!-- Responsive -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/javascript" async="" src="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/analytics.js"></script><script async="" src="Filer_for_Help%20The%20Homeless%20Coin%20-%20HTH/js.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-121537271-1');
+    </script>
+	
+	
+  <title>https://devilking6105.github.io/hthcoin/</title>
+ 
 </head>
 <body>
+	
+	<style>
+		
+		body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #000;
+}
+		
+	
+	</style>
 
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
