--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@ not only hold governments but yourself accountable for ensuring a better
  future for every person. This all starts here."</p>
                     </div>
                     <div class="btn-box">
-                        <a href="https://hthcoin.github.io/web/Faq.html" class="theme-btn btn-style-one"><span>Read our FAQ</span></a>
+                        <a href="https://devilking6105.github.io/hthcoin/Faq.html" class="theme-btn btn-style-one"><span>Read our FAQ</span></a>
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@ not only hold governments but yourself accountable for ensuring a better
             <div class="image-column col-md-6 col-sm-12 col-xs-12">
                 <div class="inner-column">
                     <figure class="image-1"><img src="HTH/about-homeless2.jpg" alt=""></figure>
-                    <figure class="image-2"><img src="HTH/about-homeless.jpg" alt=""></figure>
+                    <figure class="image-2"><img src="HTH/about-homeless1.jpg" alt=""></figure>
                 </div>
             </div>
         </div>
